--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -41,6 +41,11 @@ interval=1
 signal=10
 command=/usr/share/i3blocks/volume 5 pulse
 
+#if you prefer automatic updating
+[volume-pulseaudio]
+command=/usr/share/i3blocks/volume-pulseaudio -Sa
+interval=persist
+
 # CPU usage
 #
 # The script may be called with -w and -c switches to specify thresholds,
@@ -65,7 +70,7 @@ interval=30
 # Date Time
 #
 [time]
-command=date '+%Y-%m-%d %H:%M:%S'
+command=date '+%I:%M:%S %d-%m-%Y'
 interval=1
 
 # Generic media player support
