--- a/i3/config
+++ b/i3/config
@@ -181,7 +181,7 @@ set $urgent-bg-color     #E53935
 
 # Window colors
 #                       border              background         text                 indicator
-client.focused          $border-color       $border-color          $text-color          $bg-color
+client.focused          $border-color       $border-color      $text-color          $bg-color
 client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-color $bg-color
 client.focused_inactive $border-color       $inactive-bg-color $inactive-text-color $bg-color
 client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          $bg-color
@@ -223,7 +223,7 @@ mode "$mode_system" {
 bindsym $mod+Delete mode "$mode_system"
 
 # start rofi (a program launcher)
-bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -width 100 -padding 800 -bw 0 -font "System San Francisco Display 18"
+bindsym $mod+d exec rofi -show run -lines 5 -eh 2 -width 100 -padding 800 -bw 0
 
 # Lock on mod+shift+x
 bindsym $mod+shift+x exec i3lock -i ~/Pictures/Wallpapers/wallpaper.*
@@ -246,7 +246,7 @@ bindsym XF86AudioPrev exec playerctl previous
 exec_always feh --bg-scale ~/Pictures/Wallpapers/wallpaper.*
 exec_always synclient MaxTapTime=0
 exec google-chrome
-exec compton
+execcompton
 
 # Force workspaces
 assign [class="Google-chrome"] $workspace3
