--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -73,6 +73,11 @@ interval=30
 command=date '+%I:%M:%S %d-%m-%Y'
 interval=1
 
+[iface]
+#instance=wlan0
+label=
+interval=10
+
 # Generic media player support
 #
 # This displays "ARTIST - SONG" if a music is playing.
