--- a/i3/config
+++ b/i3/config
@@ -92,15 +92,15 @@ bindsym $mod+a focus parent
 
 # Define workspace names
 set $workspace1 "1 "
-set $workspace2 "2 " #For terminals and misc
-set $workspace3 "3 " #For browser
-set $workspace4 "4 " #For file manager
+set $workspace2 "2 "
+set $workspace3 "3 "
+set $workspace4 "4 "
 set $workspace5 "5"
 set $workspace6 "6"
 set $workspace7 "7"
 set $workspace8 "8"
 set $workspace9 "9"
-set $workspace10 "10 " #For music player
+set $workspace10 "10 "
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
