Added battery warning and some reminders for things that need to be manually updated to install script

--- a/i3/config
+++ b/i3/config
@@ -248,6 +248,7 @@ exec_always feh --bg-scale ~/Pictures/Wallpapers/wallpaper.*
 exec_always synclient MaxTapTime=0
 exec google-chrome
 exec compton
+exec_always --no-startup-id nm-applet
 
 # Force workspaces
 assign [class="Google-chrome"] $workspace3
