Fixed screen tearing due to compton

--- a/compton.conf
+++ b/compton.conf
@@ -1,1 +1,6 @@
+backend = "glx";
+paint-on-overlay = true;
+glx-no-stencil = true;
+vsync = "opengl-swc";
+
 opacity-rule = ["80:class_g  = 'Gnome-terminal'"]
