--- a/i3/config
+++ b/i3/config
@@ -202,25 +202,6 @@ bar {
 	      }
 }
 
-# Auto lock
-exec --no-startup-id xautolock -time 4 -locker "i3lock-wrapper -l"
-
-set $Locker i3lock-wrapper -l && sleep 1
-
-set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
-mode "$mode_system" {
-    bindsym l exec --no-startup-id $Locker, mode "default"
-    bindsym e exec --no-startup-id i3-msg exit, mode "default"
-    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
-    bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
-    bindsym r exec --no-startup-id systemctl reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id  systemctl poweroff -i, mode "default"
-
-    # back to normal: Enter or Escape
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-
 bindsym $mod+Delete mode "$mode_system"
 
 # start rofi (a program launcher)
@@ -246,9 +227,10 @@ bindsym XF86AudioPrev exec playerctl previous
 # Startup Applications
 exec_always feh --bg-scale ~/Pictures/Wallpapers/wallpaper.*
 exec_always synclient MaxTapTime=0
+exec /usr/bin/compton --config /home/sam/.config/compton.conf
 exec google-chrome
-exec compton
-exec_always --no-startup-id nm-applet
+exec powertop --auto-tune
+exec --no-startup-id nm-applet
 
 # Force workspaces
 assign [class="Google-chrome"] $workspace3
@@ -302,3 +284,6 @@ mode "$mode_gaps_outer" {
 # Screenshots
 bindsym $mod+p exec "gnome-screenshot"
 bindsym $mod+Shift+p exec "gnome-screenshot -a"
+
+#DRUNK NONSENSE
+bindsym $mod+Shift+d exec "cd ~/Documents/Git/Hyperloop"
