--- a/i3/config
+++ b/i3/config
@@ -216,7 +216,7 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #d
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-volume 0 0% # mute sound && exec --no-startup-id pactl set-sink-volume 6 0% # mute sound
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec sxbacklight -inc 20 # increase screen brightness
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
 
 # Media player controls
